--- a/ansible/roles/discovery-rooms/tasks/main.yml
+++ b/ansible/roles/discovery-rooms/tasks/main.yml
@@ -7,6 +7,10 @@
   ansible.builtin.import_tasks:
     file: discovery-room.yml
 
+- name: add all users to discovery room
+  ansible.builtin.import_tasks:
+    file: join-discovery-room.yml
+
 - name: Dummy user joins external discovery rooms listed in matrix.discovery_room.servers_list
   uri:
     url: "http://{{ matrix.server_name }}/_matrix/client/r0/join/%23discoveryroom:{{ item }}"
@@ -21,25 +25,3 @@
       Authorization: "Bearer {{ dummy_access_token }}"
   loop: "{{ matrix.discovery_room.servers_list }}"
   ignore_errors: true
-
-- name: Verify the state of the discovery_room
-  uri:
-    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ discovery_room.json.room_id }}"
-    method: GET
-    status_code: 200
-    body_format: json
-    use_proxy: false
-    headers:
-      Authorization: "Bearer {{ admin_access_token }}"
-
-- name: Verify the users in the discovery_room
-  uri:
-    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ discovery_room.json.room_id }}/members"
-    method: GET
-    status_code: 200
-    body_format: json
-    use_proxy: false
-    headers:
-      Authorization: "Bearer {{ admin_access_token }}"
-
-#- name: Get discovery_room id
