--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,8 @@ override.tf.json
 # IDE settings
 .idea
 
-# configuration files
-*.env.sh
-kubeconfig*
-
+# ignore files located in local folder
+local
 
 # Ansible temp files
 ansible/ansible_collections
