branch with **-deployed name will trigger the GHA deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
           ;;
 
           *)
-          for environment_perso in ${{ PERSONAL_ENVIRONMENT_LIST }}; do
+          for environment_perso in ${{ vars.PERSONAL_ENVIRONMENT_LIST }}; do
             if [[ $environment_perso == *"${ENVIRONMENT}"* ]]; then
               echo "my_env=${environment_perso}" >> $GITHUB_OUTPUT
               break
