--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,8 @@ jobs:
           ;;
 
           *)
-          for environment_perso in ${{ vars.PERSONAL_ENVIRONMENT_LIST }}; do
+          environment_list_array = ( ${{ vars.PERSONAL_ENVIRONMENT_LIST }} )
+          for environment_perso in "${environment_list_array[@]}"; do
             if [[ $environment_perso == *"${ENVIRONMENT}"* ]]; then
               echo "${environment_perso} found"
               echo "my_env=${environment_perso}" >> $GITHUB_OUTPUT
