96 deploy multi env (#99)
branch with **-deployed name will trigger the GHA deploy workflow

(cherry picked from commit b911ee9cfce4892c85946b70b9556438438e3cbe)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,11 +91,14 @@ jobs:
           ;;
 
           *)
-          for environment_perso in ${{ PERSONAL_ENVIRONMENT_LIST }}; do
+          environment_list_array=( ${{ vars.PERSONAL_ENVIRONMENT_LIST }} )
+          for environment_perso in "${environment_list_array[@]}"; do
             if [[ $environment_perso == *"${ENVIRONMENT}"* ]]; then
+              echo "${environment_perso} found"
               echo "my_env=${environment_perso}" >> $GITHUB_OUTPUT
               break
             else
+              echo "${environment_perso} not selected"
               echo "my_env=${ENVIRONMENT}" >> $GITHUB_OUTPUT
             fi
           done
