--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ on:
     branches:
       - develop
       - preprod
+      - '**-deployed'
 
 permissions:
   contents: read
@@ -90,9 +91,17 @@ jobs:
           ;;
 
           *)
-          echo "other case : environment=${ENVIRONMENT}"
-          echo "my_env=${ENVIRONMENT}" >> $GITHUB_OUTPUT
+          for environment_perso in ${{ PERSONAL_ENVIRONMENT_LIST }}; do
+            if [[ $environment_perso == *"${ENVIRONMENT}"* ]]; then
+              echo "my_env=${environment_perso}" >> $GITHUB_OUTPUT
+              break
+            else
+              echo "my_env=${ENVIRONMENT}" >> $GITHUB_OUTPUT
+            fi
+          done
 
+          echo "other case : environment=${ENVIRONMENT}"
+          
           esac
 
   provisioning:
