#96 : deploy workflow test

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,7 +98,7 @@ jobs:
               echo "my_env=${environment_perso}" >> $GITHUB_OUTPUT
               break
             else
-              echo "${environment_perso} not selected"
+              echo "${environment_perso} not selected."
               echo "my_env=${ENVIRONMENT}" >> $GITHUB_OUTPUT
             fi
           done
