--- a/ansible/roles/external-dns/templates/external-dns.yml
+++ b/ansible/roles/external-dns/templates/external-dns.yml
@@ -57,7 +57,7 @@ spec:
       serviceAccountName: external-dns
       containers:
         - name: external-dns
-          image: registry.k8s.io/external-dns/external-dns:v0.13.2
+          image: "registry.k8s.io/external-dns/external-dns:{{ external_dns.version }}"
           args:
             - --source=ingress
             - "--domain-filter={{ dns_zone }}"
