Developers multi env matabiau deployed (#102)
* unable the possibility to run terraform init without setting the backend name

* documentation

* #96 : correction on environment switch on deploy workflow

* #96 : deploy workflow test

* #96 : deploy workflow test

* #96 : display selected env

* #96 : terraform format

* #96 : log of environment found

* #96 : better log of environment found

* #96 : better log of environment found

* #96 : separation between dns_zone and environment name

* #96 : environment selection in GHA workflows

* #96 : environment selection in GHA workflows

* #96 : correction on environment var on destroy workflow

* #96 : destroy multi env

* #96 : environment creation and destruction improved, specially with wait for the external-dns to do its job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,17 +93,18 @@ jobs:
           *)
           environment_list_array=( ${{ vars.PERSONAL_ENVIRONMENT_LIST }} )
           for environment_perso in "${environment_list_array[@]}"; do
-            if [[ $environment_perso == *"${ENVIRONMENT}"* ]]; then
+            if [[ ${BRANCH} =~ $environment_perso ]];
+            then
               echo "${environment_perso} found"
-              echo "my_env=${environment_perso}" >> $GITHUB_OUTPUT
+              echo "my_env=${environment_perso}" > $GITHUB_OUTPUT
               break
             else
-              echo "${environment_perso} not selected"
-              echo "my_env=${ENVIRONMENT}" >> $GITHUB_OUTPUT
+              echo "${environment_perso} not selected."
+              echo "my_env=${ENVIRONMENT}" > $GITHUB_OUTPUT
             fi
           done
 
-          echo "other case : environment=${ENVIRONMENT}"
+          echo "other case : " && cat "$GITHUB_OUTPUT"
           
           esac
 
@@ -188,7 +189,7 @@ jobs:
 
       # Generates group_vars/all file from the environment variables
       - name: "Generates group_vars/all file from the environment variables"
-        run: sh scripts/generate_var_file.sh
+        run: export ENVIRONMENT="${{ needs.set_environment.outputs.my_env }}" && sh scripts/generate_var_file.sh
 
       # Run ansible_configuration.sh script
       - name: ansible_configuration script
