--- a/ansible/roles/keycloak-operator/tasks/main.yml
+++ b/ansible/roles/keycloak-operator/tasks/main.yml
@@ -17,7 +17,7 @@
   ansible.builtin.get_url:
     url: "https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/{{ keycloak.operator_version }}/kubernetes/keycloaks.k8s.keycloak.org-v1.yml"
     dest: "{{ kc_operator_tmp_folder.path }}/keycloaks.k8s.keycloak.org-v1.yml"
-    mode: '0664'
+    mode: "0664"
   changed_when: False
 
 - name: Apply the CRDs for keycloak-operator
@@ -30,7 +30,7 @@
   ansible.builtin.get_url:
     url: "https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/{{ keycloak.operator_version }}/kubernetes/keycloakrealmimports.k8s.keycloak.org-v1.yml"
     dest: "{{ kc_operator_tmp_folder.path }}/keycloakrealmimports.k8s.keycloak.org-v1.yml"
-    mode: '0664'
+    mode: "0664"
   changed_when: False
 
 - name: Apply the CRDs for keycloak-operator
@@ -43,7 +43,7 @@
   ansible.builtin.get_url:
     url: "https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/{{ keycloak.operator_version }}/kubernetes/kubernetes.yml"
     dest: "{{ kc_operator_tmp_folder.path }}/kubernetes.yml"
-    mode: '0664'
+    mode: "0664"
   changed_when: False
 
 - name: Apply the Keycloak Operator deployment
