--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@
 #
 # Documentation for `hashicorp/setup-terraform` is located here: https://github.com/hashicorp/setup-terraform
 
-name: 'Deployment'
+name: "Deployment"
 
 on:
   workflow_dispatch:
@@ -12,7 +12,7 @@ on:
     branches:
       - develop
       - preprod
-      - '**-deployed'
+      - "**-deployed"
 
 permissions:
   contents: read
@@ -71,7 +71,7 @@ env:
 
 jobs:
   set_environment:
-    name: 'Dynamic detection of environment'
+    name: "Dynamic detection of environment"
     outputs:
       my_env: ${{ steps.setenv.outputs.my_env }}
     runs-on: ubuntu-latest
@@ -109,11 +109,11 @@ jobs:
           done
 
           echo "other case : " && cat "$GITHUB_OUTPUT"
-          
+
           esac
 
   provisioning:
-    name: 'Provisioning with Terraform'
+    name: "Provisioning with Terraform"
     runs-on: ubuntu-latest
     environment:
       name: ${{ needs.set_environment.outputs.my_env }}
@@ -159,9 +159,8 @@ jobs:
         # if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
 
-
   configuration:
-    name: 'Configuration of Kubernetes cluster'
+    name: "Configuration of Kubernetes cluster"
     runs-on: ubuntu-latest
     needs: [provisioning, set_environment]
     environment:
