--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -29,8 +29,8 @@
           cert-manager.io/cluster-issuer: "letsencrypt-prod"
           external-dns.alpha.kubernetes.io/hostname: "{{ matrix.server_name }}"
         tls:
-          - hosts :
-            - "{{ matrix.server_name }}"
+          - hosts:
+              - "{{ matrix.server_name }}"
             secretName: "matrix-tls-secret"
       wellknown:
         enabled: true
@@ -50,7 +50,7 @@
     update_repo_cache: yes
 
 - name: wait for the matrix-synapse replicaset to be ready
-  shell: "kubectl get deployments.apps matrix-synapse -o jsonpath=\"{$.status.conditions}\" |jq '.[] | select(.reason | test(\"NewReplicaSetAvailable\")).message'"
+  shell: 'kubectl get deployments.apps matrix-synapse -o jsonpath="{$.status.conditions}" |jq ''.[] | select(.reason | test("NewReplicaSetAvailable")).message'''
   register: rs_message
   until: rs_message.stdout.find("successfully") != -1
   retries: 30
