--- a/ansible/roles/external-dns/templates/external-dns.yml
+++ b/ansible/roles/external-dns/templates/external-dns.yml
@@ -62,7 +62,7 @@ spec:
             - --source=ingress
             - "--domain-filter={{ dns_zone }}"
             - --provider=ovh
-            - "--txt-owner-id={{ environment }}"
+            - "--txt-owner-id={{ external_dns.registry_id }}"
             - --log-level=trace
           env:
             - name: OVH_APPLICATION_KEY
