96 multi env bis matabiau deployed (#108)
* #96 : customize registry of external-dns with env name

* #96 : customize registry of external-dns with ID specific by environment

--- a/ansible/roles/external-dns/templates/external-dns.yml
+++ b/ansible/roles/external-dns/templates/external-dns.yml
@@ -62,6 +62,7 @@ spec:
             - --source=ingress
             - "--domain-filter={{ dns_zone }}"
             - --provider=ovh
+            - "--txt-owner-id={{ external_dns.registry_id }}"
             - --log-level=trace
           env:
             - name: OVH_APPLICATION_KEY
