#103 : msteams bridge installation

--- a/ansible/configuration.yml
+++ b/ansible/configuration.yml
@@ -13,6 +13,7 @@
     - synapse
     - first-admin
     - psc-button
+    - teams-bridge
     - discovery-rooms
     - synapse-extra-config
     - element-web
