--- a/ansible/roles/synapse-extra-config/templates/deployment-patch.yml
+++ b/ansible/roles/synapse-extra-config/templates/deployment-patch.yml
@@ -6,6 +6,8 @@ spec:
           volumeMounts:
             - name: extraconfig
               mountPath: /etc/matrix-synapse/conf.d/
+            - name: msteams-registration
+              mountPath: /data/
       volumes:
         - configMap:
             name: matrix-synapse-extraconfig
@@ -13,3 +15,9 @@ spec:
           items:
             - key: "extraconfig.yaml"
               path: "extraconfig.yaml"
+        - configMap:
+            name: msteams-registration-configmap
+          name: msteams-registration
+          items:
+            - key: "msteams-registration.yaml"
+              path: "msteams-registration.yaml"
