#103 : msteams bridge configuration correction

--- a/ansible/destroy-k8s.yml
+++ b/ansible/destroy-k8s.yml
@@ -8,6 +8,7 @@
     - element-web
     - synapse
     - keycloak
+    - teams-bridge
   tasks:
     - name: Wait for 60 seconds so that external-dns has correctly unregistered the different ingresses
       ansible.builtin.wait_for:
