--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,6 +12,18 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform Init
+        run: terraform init -backend=false
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Validate
+        run: ">&2 terraform fmt --check"
+
       - uses: terraform-linters/setup-tflint@v3
         name: Setup TFLint
 
