--- a/ansible/roles/teams-bridge/tasks/main.yml
+++ b/ansible/roles/teams-bridge/tasks/main.yml
@@ -51,7 +51,7 @@
   register: teams_registration_tmp_folder
   changed_when: False
 
-- name : Copy file content from bridge pod to local tmp folder
+- name : Copy msteams-registration.yaml file content from bridge pod to local tmp folder
   kubernetes.core.k8s_cp:
     namespace: msteams
     pod: "{{ pod_name.stdout }}"
@@ -60,5 +60,13 @@
     state: from_pod
   when: absent_or_present=="present"
 
-- name: Create configmap with copied file
-  shell: "kubectl create configmap msteams-registration-configmap --from-file={{ teams_registration_tmp_folder.path }}/msteams-registration.yaml "
+- name: Copy vars of msteams-registration.yaml into the msteams_bridge_vars variable
+  ansible.builtin.include_vars:
+    file: "{{ teams_registration_tmp_folder.path }}/msteams-registration.yaml"
+    name: msteams_bridge_vars
+  when: absent_or_present=="present"
+
+- name: Create or update msteams-registration-configmap with msteams_bridge_vars values
+  kubernetes.core.k8s:
+    state: "{{ absent_or_present }}"
+    template: 'msteams-registration.yml'
