--- a/ansible/roles/teams-bridge/templates/msteams-configmap.yml
+++ b/ansible/roles/teams-bridge/templates/msteams-configmap.yml
@@ -83,7 +83,7 @@ data:
       # Log level of console output
       # Allowed values starting with most verbose:
       # silly, verbose, info, warn, error
-      console: info
+      console: verbose
       # Date and time formatting
       lineDateFormat: MMM-D HH:mm:ss.SSS
       # Logging files
