--- a/ansible/roles/teams-bridge/templates/msteams-pvc.yml
+++ b/ansible/roles/teams-bridge/templates/msteams-pvc.yml
@@ -9,4 +9,4 @@ spec:
   resources:
     requests:
       storage: 10Mi
-  storageClassName: csi-cinder-high-speed
+  storageClassName: csi-cinder-classic
