--- a/ansible/roles/teams-bridge/tasks/main.yml
+++ b/ansible/roles/teams-bridge/tasks/main.yml
@@ -9,30 +9,30 @@
 - name: Bridge configmap
   kubernetes.core.k8s:
     state: "{{ absent_or_present }}"
-    template: 'msteams-configmap.yml'
+    template: "msteams-configmap.yml"
 
 - name: Bridge persistent volume
   kubernetes.core.k8s:
     state: "{{ absent_or_present }}"
-    template: 'msteams-pvc.yml'
+    template: "msteams-pvc.yml"
 
 - name: Bridge app deployment
   kubernetes.core.k8s:
     state: "{{ absent_or_present }}"
-    template: 'msteams-deployment.yml'
+    template: "msteams-deployment.yml"
 
 - name: Bridge service
   kubernetes.core.k8s:
     state: "{{ absent_or_present }}"
-    template: 'msteams-service.yml'
+    template: "msteams-service.yml"
 
 - name: Bridge ingress
   kubernetes.core.k8s:
     state: "{{ absent_or_present }}"
-    template: 'msteams-ingress.yml'
+    template: "msteams-ingress.yml"
 
 - name: wait for the msteams replicaset to be ready
-  shell: "kubectl get deployments.apps -n msteams msteams-bridge -o jsonpath=\"{$.status.conditions}\" |jq '.[] | select(.reason | test(\"NewReplicaSetAvailable\")).message'"
+  shell: 'kubectl get deployments.apps -n msteams msteams-bridge -o jsonpath="{$.status.conditions}" |jq ''.[] | select(.reason | test("NewReplicaSetAvailable")).message'''
   register: rs_message
   until: rs_message.stdout.find("successfully") != -1
   retries: 30
@@ -40,7 +40,7 @@
   when: absent_or_present=="present"
 
 - name: get name of the pod deployed for the bridge
-  shell: "kubectl get pods -n msteams -l app=msteams-bridge -o jsonpath=\"{.items[0].metadata.name}\""
+  shell: 'kubectl get pods -n msteams -l app=msteams-bridge -o jsonpath="{.items[0].metadata.name}"'
   register: pod_name
   when: absent_or_present=="present"
 
@@ -51,7 +51,7 @@
   register: teams_registration_tmp_folder
   changed_when: False
 
-- name : Copy msteams-registration.yaml file content from bridge pod to local tmp folder
+- name: Copy msteams-registration.yaml file content from bridge pod to local tmp folder
   kubernetes.core.k8s_cp:
     namespace: msteams
     pod: "{{ pod_name.stdout }}"
@@ -69,4 +69,4 @@
 - name: Create or update msteams-registration-configmap with msteams_bridge_vars values
   kubernetes.core.k8s:
     state: "{{ absent_or_present }}"
-    template: 'msteams-registration.yml'
+    template: "msteams-registration.yml"
