#39 : only database. Vlan commented

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -25,9 +25,9 @@ env:
   OVH_APPLICATION_SECRET: ${{ secrets.OVH_APPLICATION_SECRET }}
   OVH_CONSUMER_KEY: ${{ secrets.OVH_CONSUMER_KEY }}
   # variables used by infrastructure components
-  SERVICE_NAME: ${{ vars.SERVICE_NAME }}
+  OVH_CLOUD_PROJECT_SERVICE: ${{ vars.OVH_CLOUD_PROJECT_SERVICE }}
   CLUSTER_NAME: ${{ vars.CLUSTER_NAME }}
-  CLUSTER_REGION: ${{ vars.CLUSTER_REGION }}
+  OS_REGION_NAME: ${{ vars.OS_REGION_NAME }}
   CLUSTER_VERSION: ${{ vars.CLUSTER_VERSION }}
   NODEPOOL_NAME: ${{ vars.NODEPOOL_NAME }}
   NODEPOOL_FLAVOR: ${{ vars.NODEPOOL_FLAVOR }}
