#39 : correction on destroy GHA workflow and on script used to retrieve kaycloak passwords

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -37,17 +37,24 @@ env:
   AWS_S3_ENDPOINT: ${{ vars.AWS_S3_ENDPOINT }}
   AWS_REGION: ${{ vars.AWS_REGION }}
   # variables used by infrastructure components
-  CLUSTER_NAME: ${{ vars.CLUSTER_NAME }}
   CLUSTER_VERSION: ${{ vars.CLUSTER_VERSION }}
-  NODEPOOL_NAME: ${{ vars.NODEPOOL_NAME }}
   NODEPOOL_FLAVOR: ${{ vars.NODEPOOL_FLAVOR }}
+  DESIRED_NODES_NUM: ${{ vars.DESIRED_NODES_NUM }}
+  MAX_NODES_NUM: ${{ vars.MAX_NODES_NUM }}
+  MIN_NODES_NUM: ${{ vars.MIN_NODES_NUM }}
   DNS_ZONE: ${{ vars.DNS_ZONE }}
   ISSUER_MAIL: ${{ vars.ISSUER_MAIL }}
+  GLOBALE_REGION: ${{ vars.GLOBALE_REGION }}
+  DATABASE_VERSION: ${{ vars.DATABASE_VERSION }}
+  DATABASE_PLAN: ${{ vars.DATABASE_PLAN }}
+  DATABASE_FLAVOR: ${{ vars.DATABASE_FLAVOR }}
+  DATABASE_DISK_SIZE: ${{ vars.DATABASE_DISK_SIZE }}
+  VLAN_ID: ${{ vars.VLAN_ID }}
+  VLAN_CIDR: ${{ vars.VLAN_CIDR }}
   # variables used by matrix components
   SERVER_SUBDOMAIN_NAME: ${{ vars.SERVER_SUBDOMAIN_NAME }}
   ELEMENT_SUBDOMAIN_NAME: ${{ vars.ELEMENT_SUBDOMAIN_NAME }}
   SMTP_HOST: ${{ vars.SMTP_HOST }}
-  # SMTP_PORT: ${{ vars.SMTP_PORT }}
   SMTP_USER: ${{ vars.SMTP_USER }}
   SMTP_PASS: ${{ secrets.SMTP_PASS }}
   FIRST_EIMIS_USERNAME: ${{ secrets.FIRST_EIMIS_USERNAME }}
